--- a/lab1/src/id2221/notebooks/sparksql.ipynb
+++ b/lab1/src/id2221/notebooks/sparksql.ipynb
@@ -41,9 +41,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spark = org.apache.spark.sql.SparkSession@3d0adbb2\n",
+       "fileName = data/sql/loudoun_d_primary_results_2016.json\n",
+       "df = [DESCRIPTION: string, candidateId: string ... 22 more fields]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[DESCRIPTION: string, candidateId: string ... 22 more fields]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import org.apache.spark.sql.{DataFrame, Dataset, Row, SparkSession}\n",
     "import org.apache.spark.sql.functions._\n",
@@ -65,17 +87,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- DESCRIPTION: string (nullable = true)\n",
+      " |-- candidateId: string (nullable = true)\n",
+      " |-- candidate_ballot_order: string (nullable = true)\n",
+      " |-- candidate_name: string (nullable = true)\n",
+      " |-- districtId: string (nullable = true)\n",
+      " |-- district_type: string (nullable = true)\n",
+      " |-- election_date: string (nullable = true)\n",
+      " |-- election_name: string (nullable = true)\n",
+      " |-- election_type: string (nullable = true)\n",
+      " |-- in_precinct: string (nullable = true)\n",
+      " |-- last_name: string (nullable = true)\n",
+      " |-- locality_code: string (nullable = true)\n",
+      " |-- locality_name: string (nullable = true)\n",
+      " |-- negative_votes: string (nullable = true)\n",
+      " |-- null: array (nullable = true)\n",
+      " |    |-- element: string (containsNull = true)\n",
+      " |-- officeId: string (nullable = true)\n",
+      " |-- office_ballot_order: string (nullable = true)\n",
+      " |-- office_name: string (nullable = true)\n",
+      " |-- party: string (nullable = true)\n",
+      " |-- precinct_code: string (nullable = true)\n",
+      " |-- precinct_name: string (nullable = true)\n",
+      " |-- referendumId: string (nullable = true)\n",
+      " |-- referendum_title: string (nullable = true)\n",
+      " |-- total_votes: string (nullable = true)\n",
+      "\n",
+      "+-------------+-----------+----------------------+------------------+----------+-------------+--------------------+--------------------+-------------+--------------+---------+-------------+--------------+--------------+----+---------+-------------------+-----------+----------+-------------+--------------+------------+----------------+-----------+\n",
+      "|  DESCRIPTION|candidateId|candidate_ballot_order|    candidate_name|districtId|district_type|       election_date|       election_name|election_type|   in_precinct|last_name|locality_code| locality_name|negative_votes|null| officeId|office_ballot_order|office_name|     party|precinct_code| precinct_name|referendumId|referendum_title|total_votes|\n",
+      "+-------------+-----------+----------------------+------------------+----------+-------------+--------------------+--------------------+-------------+--------------+---------+-------------+--------------+--------------+----+---------+-------------------+-----------+----------+-------------+--------------+------------+----------------+-----------+\n",
+      "|10th District|  124209128|                     1|   Hillary Clinton|1085224094|Congressional|2016-03-01 00:00:...|2016 March Democr...|      Primary|## Provisional|  Clinton|          107|LOUDOUN COUNTY|              |  []|933838092|                  1|  President|Democratic|      ###PROV|## Provisional|            |                |          9|\n",
+      "|10th District| 1999936198|                     2|Martin J. O'Malley|1085224094|Congressional|2016-03-01 00:00:...|2016 March Democr...|      Primary|## Provisional| O'Malley|          107|LOUDOUN COUNTY|              |  []|933838092|                  1|  President|Democratic|      ###PROV|## Provisional|            |                |          0|\n",
+      "+-------------+-----------+----------------------+------------------+----------+-------------+--------------------+--------------------+-------------+--------------+---------+-------------+--------------+--------------+----+---------+-------------------+-----------+----------+-------------+--------------+------------+----------------+-----------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
     "// print the dataframe schema\n",
-    "df.<FILL IN>\n",
+    "df.printSchema()\n",
     "\n",
     "// print the first two rows\n",
-    "df.<FILL IN>"
+    "df.show(2)"
    ]
   },
   {
@@ -97,14 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+\n",
+      "|    candidate_name|\n",
+      "+------------------+\n",
+      "|    Bernie Sanders|\n",
+      "|   Hillary Clinton|\n",
+      "|Martin J. O'Malley|\n",
+      "+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
     "// get all distinct candidate names from the DataFrame\n",
-    "df.<FILL IN>.show()"
+    "df.select(\"candidate_name\").distinct().show()"
    ]
   },
   {
@@ -125,14 +204,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+----------------------+\n",
+      "|    candidate_name|candidate_ballot_order|\n",
+      "+------------------+----------------------+\n",
+      "|   Hillary Clinton|                     1|\n",
+      "|Martin J. O'Malley|                     2|\n",
+      "|    Bernie Sanders|                     3|\n",
+      "+------------------+----------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "orderDF = [candidate_name: string, candidate_ballot_order: string]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[candidate_name: string, candidate_ballot_order: string]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
     "// get the ballot order and discard the many duplicates (all VA ballots are the same)\n",
-    "val orderDF = df.<FILL IN>\n",
+    "val orderDF = df.select(\"candidate_name\", \"candidate_ballot_order\").orderBy(\"candidate_ballot_order\").distinct()\n",
+    "orderDF.cache()\n",
     "orderDF.show()"
    ]
   },
@@ -161,9 +275,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-------------------+\n",
+      "|    candidate_name|      friendly_name|\n",
+      "+------------------+-------------------+\n",
+      "|   Hillary Clinton|    First on Ballot|\n",
+      "|Martin J. O'Malley|In Middle of Ballot|\n",
+      "|    Bernie Sanders|     Last on Ballot|\n",
+      "+------------------+-------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "orderFileName = data/sql/friendly_orders.json\n",
+       "friendlyDF = [candidate_ballot_order: string, friendly_name: string]\n",
+       "joinedDF = [candidate_ballot_order: string, candidate_name: string ... 1 more field]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[candidate_ballot_order: string, candidate_name: string ... 1 more field]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
@@ -171,10 +321,10 @@
     "val friendlyDF = spark.read.json(orderFileName)\n",
     "\n",
     "// join the tables so the results show descriptive text\n",
-    "val joinedDF = orderDF.<FILL IN>\n",
-    "\n",
+    "val joinedDF = orderDF.join(friendlyDF, \"candidate_ballot_order\")\n",
+    "//joinedDF.show()\n",
     "// hide the numeric column in the output.\n",
-    "joinedDF.<FILL IN>.show()"
+    "joinedDF.select(\"candidate_name\", \"friendly_name\").show()"
    ]
   },
   {
@@ -193,17 +343,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+\n",
+      "|total_votes_int|\n",
+      "+---------------+\n",
+      "|          36149|\n",
+      "+---------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "votesColumn = CAST(total_votes AS INT)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CAST(total_votes AS INT)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
     "// orginal data is string-based, so create an integer version of it and call it total_votes_int\n",
-    "val votesColumn = df(\"total_votes\").<FILL IN>\n",
+    "val votesColumn = df(\"total_votes\").cast(\"int\")//.alias(\"total_votes_int\")\n",
     "\n",
     "// get the integer-based votes column and sum all values together\n",
-    "df.<FILL IN>.show()"
+    "df.agg(sum(votesColumn).alias(\"total_votes_int\")).show()"
    ]
   },
   {
@@ -224,19 +406,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+----------+\n",
+      "|    candidate_name|sum_column|\n",
+      "+------------------+----------+\n",
+      "|   Hillary Clinton|     21180|\n",
+      "|    Bernie Sanders|     14730|\n",
+      "|Martin J. O'Malley|       239|\n",
+      "+------------------+----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "candidateDF = [candidate_name: string, total_votes: int]\n",
+       "groupedDF = [candidate_name: string, sum_column: bigint]\n",
+       "summaryDF = [candidate_name: string, sum_column: bigint]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[candidate_name: string, sum_column: bigint]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
     "// get just the candidate names and votes.\n",
-    "val candidateDF = df.<FILL IN>\n",
+    "val candidateDF = df.select(df(\"candidate_name\"), df(\"total_votes\").cast(\"int\"))\n",
     "\n",
     "// group by candidate name and sum votes, and assign an alias \"sum_column\" to the sum so we can order\n",
     "// on that column.\n",
-    "val groupedDF = candidateDF.<FILL IN>.alias(\"sum_column\"))\n",
-    "val summaryDF = groupedDF.orderBy(<FILL IN>).cache()\n",
+    "val groupedDF = candidateDF.groupBy(\"candidate_name\")agg(sum(\"total_votes\").alias(\"sum_column\"))\n",
+    "val summaryDF = groupedDF.orderBy(desc(\"sum_column\")).cache()\n",
     "summaryDF.show()"
    ]
   },
@@ -256,9 +474,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+----------+\n",
+      "|precinct_name|sum_column|\n",
+      "+-------------+----------+\n",
+      "| 314 - LEGACY|       652|\n",
+      "+-------------+----------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "precinctColumn = CAST(precinct_code AS INT) AS `precinct_code_int`\n",
+       "pollingDF = [precinct_name: string, precinct_code_int: int ... 1 more field]\n",
+       "nonNullPollingDF = [precinct_name: string, precinct_code_int: int ... 1 more field]\n",
+       "groupedPollDF = [precinct_name: string, sum_column: bigint]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "lastException: Throwable = null\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[precinct_name: string, sum_column: bigint]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
@@ -266,12 +529,13 @@
     "val precinctColumn = df(\"precinct_code\").cast(\"int\").alias(\"precinct_code_int\")\n",
     "\n",
     "// get the precinct name, integer-based code, and integer-based votes, then filter on non-null codes.\n",
-    "val pollingDF = df.<FILL IN>\n",
-    "\n",
+    "val pollingDF = df.select(df(\"precinct_name\"), precinctColumn, df(\"total_votes\").cast(\"int\"))\n",
+    "val nonNullPollingDF = pollingDF.filter($\"precinct_code_int\".isNotNull)\n",
+    "//nonNullPollingDF.show()\n",
     "// group by precinct name and sum votes, and assign an alias \"sum_column\" to the sum so we can order on that\n",
     "// column, and then, show the max row.\n",
-    "val groupedPollDF = pollingDF.<FILL IN>.alias(\"sum_column\"))\n",
-    "groupedPollDF.<FILL IN>.show()"
+    "val groupedPollDF = nonNullPollingDF.groupBy(\"precinct_name\").agg(sum(\"total_votes\").alias(\"sum_column\"))\n",
+    "groupedPollDF.orderBy(desc(\"sum_column\")).show(1)"
    ]
   },
   {
@@ -290,13 +554,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "\n",
-    "summaryDF.<FILL IN>"
+    "summaryDF.write.format(\"json\").mode(\"overwrite\").save(\"target/json\")"
    ]
   },
   {
@@ -309,9 +573,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Spark - Scala",
+   "display_name": "Apache Toree - Scala",
    "language": "scala",
-   "name": "spark_scala"
+   "name": "apache_toree_scala"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
