Finished social network Notebook exercise

--- a/lab2/src/notebook/graphx_social_network.ipynb
+++ b/lab2/src/notebook/graphx_social_network.ipynb
@@ -21,9 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vertexArray = Array((1,(Alice,28)), (2,(Bob,27)), (3,(Charlie,65)), (4,(David,42)), (5,(Ed,55)), (6,(Fran,50)))\n",
+       "edgeArray = Array(Edge(2,1,7), Edge(2,4,2), Edge(3,2,4), Edge(3,6,3), Edge(4,1,1), Edge(5,2,2), Edge(5,3,8), Edge(5,6,3))\n",
+       "vertexRDD = ParallelCollectionRDD[0] at parallelize at <console>:50\n",
+       "edgeRDD = ParallelCollectionRDD[1] at parallelize at <console>:51\n",
+       "graph = org.apache.spark.graphx.impl.GraphImpl@5a97745f\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.graphx.impl.GraphImpl@5a97745f"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "import org.apache.spark.graphx._\n",
@@ -50,7 +74,7 @@
     "\n",
     "val vertexRDD: RDD[(Long, (String, Int))] = sc.parallelize(vertexArray)\n",
     "val edgeRDD: RDD[Edge[Int]] = sc.parallelize(edgeArray)\n",
-    "val graph: Graph[(String, Int), Int] = <FILL IN>"
+    "val graph: Graph[(String, Int), Int] = Graph(vertexRDD, edgeRDD)"
    ]
   },
   {
@@ -70,11 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fran is 50\n",
+      "Charlie is 65\n",
+      "David is 42\n",
+      "Ed is 55\n"
+     ]
+    }
+   ],
    "source": [
-    "graph.vertices.<FILL IN>.collect.foreach(v => println(s\"${v._2._1} is ${v._2._2}\"))"
+    "graph.vertices.filter{ case (id, (_, age)) => age > 30\n",
+    "                       case _ => false}.collect.foreach(v => println(s\"${v._2._1} is ${v._2._2}\"))"
    ]
   },
   {
@@ -96,12 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob likes Alice\n",
+      "Bob likes David\n",
+      "Charlie likes Bob\n",
+      "Charlie likes Fran\n",
+      "David likes Alice\n",
+      "Ed likes Bob\n",
+      "Ed likes Charlie\n",
+      "Ed likes Fran\n"
+     ]
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
-    "for (triplet <- <FILL IN>) {\n",
+    "for (triplet <- graph.triplets.collect) {\n",
     "  println(s\"${triplet.srcAttr._1} likes ${triplet.dstAttr._1}\")\n",
     "}"
    ]
@@ -115,12 +166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob loves Alice\n",
+      "Ed loves Charlie\n"
+     ]
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
-    "for (triplet <- <FILL IN>) {\n",
+    "for (triplet <- graph.triplets.filter{ triplet => triplet.attr > 4}.collect) {\n",
     "  println(s\"${triplet.srcAttr._1} loves ${triplet.dstAttr._1}\")\n",
     "}"
    ]
@@ -134,9 +194,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inDegrees = VertexRDDImpl[27] at RDD at VertexRDD.scala:57\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "VertexRDDImpl[27] at RDD at VertexRDD.scala:57"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val inDegrees: VertexRDD[Int] = graph.inDegrees"
    ]
@@ -154,9 +234,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 1!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined class User\n",
+       "initialUserGraph = org.apache.spark.graphx.impl.GraphImpl@27229ddc\n",
+       "userGraph = org.apache.spark.graphx.impl.GraphImpl@100f4413\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.graphx.impl.GraphImpl@100f4413"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "import org.apache.spark.graphx._\n",
@@ -168,11 +277,13 @@
     "// Create a user Graph\n",
     "val initialUserGraph: Graph[User, Int] = graph.mapVertices{ case (id, (name, age)) => User(name, age, 0, 0) }\n",
     "\n",
+    "System.out.println(\"Hello 1!\")\n",
+    "\n",
     "// Fill in the degree information\n",
     "val userGraph = initialUserGraph.outerJoinVertices(initialUserGraph.inDegrees) {\n",
-    "  case (id, u, inDegOpt) => <FILL IN>\n",
-    "}.<FILL IN> {\n",
-    "  case (id, u, outDegOpt) => <FILL IN>\n",
+    "     (id, u, inDegOpt) => User(u.name, u.age, inDegOpt.getOrElse(0), u.outDeg)\n",
+    "}.outerJoinVertices(initialUserGraph.outDegrees) { \n",
+    "     (id, u, outDegOpt) => User(u.name, u.age, u.inDeg, outDegOpt.getOrElse(0))\n",
     "}\n"
    ]
   },
@@ -193,13 +304,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User 6 is called Fran and is liked by 2 people.\n",
+      "User 1 is called Alice and is liked by 2 people.\n",
+      "User 2 is called Bob and is liked by 2 people.\n",
+      "User 3 is called Charlie and is liked by 1 people.\n",
+      "User 4 is called David and is liked by 1 people.\n",
+      "User 5 is called Ed and is liked by 0 people.\n"
+     ]
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "for ((id, property) <- userGraph.vertices.collect) {\n",
-    "  println(s\"User $id is called <FILL IN> and is liked by ${property.inDeg} people.\")\n",
+    "  println(s\"User $id is called ${property.name} and is liked by ${property.inDeg} people.\")\n",
     "}"
    ]
   },
@@ -212,13 +336,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob\n",
+      "David\n"
+     ]
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "userGraph.vertices.filter {\n",
-    "  case (id, u) => <FILL IN>\n",
+    "  case (id, u) => u.inDeg == u.outDeg\n",
     "}.collect.foreach {\n",
     "  case (id, property) => println(property.name)\n",
     "}"
@@ -243,17 +376,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "oldestFollower = VertexRDDImpl[181] at RDD at VertexRDD.scala:57\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "VertexRDDImpl[181] at RDD at VertexRDD.scala:57"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "// Find the oldest follower for each user\n",
     "val oldestFollower: VertexRDD[(String, Int)] = userGraph.aggregateMessages[(String, Int)](\n",
-    "  // sendMsg\n",
-    "  triplet => <FILL IN>,\n",
-    "  // mergeMsg\n",
-    "  (a, b) => <FILL IN>\n",
+    "    // sendMsg\n",
+    "    triplet => triplet.sendToDst(triplet.srcAttr.name, triplet.srcAttr.age),\n",
+    "    \n",
+    "    // mergeMsg\n",
+    "    (a, b) => {\n",
+    "        if (a._2 > b._2)\n",
+    "            a\n",
+    "        else\n",
+    "            b\n",
+    "    }\n",
     ")\n"
    ]
   },
@@ -274,9 +433,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charlie is the oldest follower of Fran.\n",
+      "David is the oldest follower of Alice.\n",
+      "Charlie is the oldest follower of Bob.\n",
+      "Ed is the oldest follower of Charlie.\n",
+      "Bob is the oldest follower of David.\n",
+      "Ed does not have any followers.\n"
+     ]
+    }
+   ],
    "source": [
     "userGraph.vertices.leftJoin(oldestFollower) { (id, user, optOldestFollower) =>\n",
     "  optOldestFollower match {\n",
@@ -295,16 +467,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average age of Fran's followers is 60.0.\n",
+      "The average age of Alice's followers is 34.5.\n",
+      "The average age of Bob's followers is 60.0.\n",
+      "The average age of Charlie's followers is 55.0.\n",
+      "The average age of David's followers is 27.0.\n",
+      "Ed does not have any followers.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "averageAge = VertexRDDImpl[189] at RDD at VertexRDD.scala:57\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "VertexRDDImpl[189] at RDD at VertexRDD.scala:57"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
     "val averageAge: VertexRDD[Double] = userGraph.aggregateMessages[(Int, Double)](\n",
     "  // map function returns a tuple of (1, Age)\n",
-    "  triplet => <FILL IN>,\n",
+    "  triplet => triplet.sendToDst(1, triplet.srcAttr.age),\n",
     "  // reduce function combines (sumOfFollowers, sumOfAge)\n",
-    "  (a, b) => <FILL IN>\n",
+    "  (a, b) => (a._1 + b._1, a._2 + b._2)\n",
     ").mapValues((id, p) => p._2 / p._1)\n",
     "\n",
     "// Display the results\n",
@@ -327,12 +531,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fran is in component 3\n",
+      "Charlie is in component 3\n",
+      "David is in component 4\n",
+      "Ed is in component 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "olderGraph = org.apache.spark.graphx.impl.GraphImpl@6d7de229\n",
+       "cc = org.apache.spark.graphx.impl.GraphImpl@1f49ce77\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.graphx.impl.GraphImpl@1f49ce77"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// TODO: Replace <FILL IN> with appropriate code\n",
-    "val olderGraph = userGraph.subgraph(<FILL IN>)\n",
+    "val olderGraph = userGraph.subgraph(vpred = (vid, user) => user.age > 30)\n",
     "\n",
     "// compute the connected components\n",
     "val cc = olderGraph.connectedComponents\n",
@@ -342,27 +577,28 @@
     "  case (id, user, comp) => s\"${user.name} is in component ${comp.get}\"\n",
     "}.collect.foreach{ case (id, str) => println(str) }"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spylon-kernel",
+   "display_name": "Apache Toree - Scala",
    "language": "scala",
-   "name": "spylon-kernel"
+   "name": "apache_toree_scala"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
-   "help_links": [
-    {
-     "text": "MetaKernel Magics",
-     "url": "https://metakernel.readthedocs.io/en/latest/source/README.html"
-    }
-   ],
    "mimetype": "text/x-scala",
    "name": "scala",
    "pygments_lexer": "scala",
-   "version": "0.4.1"
+   "version": "2.11.12"
   }
  },
  "nbformat": 4,
