Finished graphx_songs jupyter notebook lab2

--- a/lab2/src/notebook/graphx_songs.ipynb
+++ b/lab2/src/notebook/graphx_songs.ipynb
@@ -19,22 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "import scala.io.Source\n",
-       "import org.apache.spark.rdd.RDD\n",
-       "import org.apache.spark.graphx._\n",
-       "import org.apache.spark.mllib.clustering.PowerIterationClustering\n",
        "defined class Song\n"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -62,13 +57,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fileName = data/song_hash.txt\n",
+       "songs = MapPartitionsRDD[22] at map at <console>:49\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MapPartitionsRDD[22] at map at <console>:49"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val fileName = \"data/song_hash.txt\"\n",
+    "// 0\tGucci Time (w\\/ Swizz Beatz)\tGucci Mane\n",
     "\n",
-    "var songs: RDD[(VertexId, Song)] = <FILL IN>"
+    "var songs: RDD[(VertexId, Song)] = sc.textFile(fileName).map { line =>\n",
+    "    val fields = line.split(\"\\t\")\n",
+    "    (fields(0).toLong, Song(fields(1), fields(2), Set()))\n",
+    "}"
    ]
   },
   {
@@ -87,11 +107,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1084,Song(Tequila Sunrise,Fiji,Set()))\n",
+      "(1410,Song(The Sweetest Taboo,Sade,Set()))\n",
+      "(3066,Song(Bow Chicka Wow Wow,Mike Posner,Set()))\n",
+      "(1894,Song(Love Your Love The Most,Eric Church,Set()))\n",
+      "(466,Song(Stupify,Disturbed,Set()))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "emptyEdgesRDD = ParallelCollectionRDD[23] at parallelize at <console>:46\n",
+       "graphFromSongs = org.apache.spark.graphx.impl.GraphImpl@2abc1b88\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.graphx.impl.GraphImpl@2abc1b88"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "val graphFromSongs: Graph[Song, Int] = <FILL IN>\n",
+    "val emptyEdgesRDD: RDD[Edge[Int]] = sc.parallelize(Array.empty[Edge[Int]])\n",
+    "val graphFromSongs: Graph[Song, Int] = Graph(songs, emptyEdgesRDD)\n",
     "\n",
     "graphFromSongs.vertices.take(5).foreach(println)"
    ]
@@ -113,13 +166,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tagFile = data/tags.txt\n",
+       "tagIter = non-empty iterator\n",
+       "tagRDD = ParallelCollectionRDD[38] at parallelize at <console>:56\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ParallelCollectionRDD[38] at parallelize at <console>:56"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val tagFile = \"data/tags.txt\"\n",
     "\n",
-    "val tagIter: Iterator[(VertexId, Set[String])] = Source.fromFile(tagFile).getLines.zipWithIndex.map { <FILL IN> }\n",
+    "// { case (s,i) => myFn(s,i) }\n",
+    "\n",
+    "val tagIter: Iterator[(VertexId, Set[String])] = Source.fromFile(tagFile).getLines.zipWithIndex.map{\n",
+    "    case (line, index) => {\n",
+    "        val songIDs = line.split(\" \").toSet\n",
+    "        (index.toLong, songIDs)\n",
+    "    }\n",
+    "}\n",
     "\n",
     "val tagRDD = sc.parallelize(tagIter.toSeq)"
    ]
@@ -140,16 +222,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1084,Song(Tequila Sunrise,Fiji,Set()))\n",
+      "(1410,Song(The Sweetest Taboo,Sade,Set(beautiful, 1980s, 80's, rock, sexy, favorite, female vocalist, smooth, female, pop, best, 80s, soul, easy listening, classic, chillout, urban, lounge, romantic, soft, singer-songwriter, lovely, chill, dance, love songs, mellow, love, jazz, female vocals, british, female vocalists, rnb, smooth jazz, favorites, ballad, relax, adult contemporary, great, melancholy, relaxing)))\n",
+      "(3066,Song(Bow Chicka Wow Wow,Mike Posner,Set(sexy, smooth, male vocalists, pop, <3, hip-hop, love song, wdzh-fm, awesome, easy listening, love at first listen, r&b, electronic, love songs, love, american, 2010s, nostalgic, rnb, favorites, wkqi-fm)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "taghashFile = data/tag_hash.txt\n",
+       "songsNtags = org.apache.spark.graphx.impl.GraphImpl@674b4d8f\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.graphx.impl.GraphImpl@674b4d8f"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "val taghashFile = \"data/tag_hash.txt\"\n",
+    "\n",
     "val songsNtags = graphFromSongs.joinVertices(tagRDD) {\n",
-    "  (id, s, ks) => ks.toList match {\n",
+    "  (id, s, ks) => ks.toList match { // s: value of graphFromSongs; ks: valueof tagRDD\n",
     "    case List(\"#\") => s\n",
     "    case _ => {\n",
     "      val taghashFile = \"data/tag_hash.txt\"\n",
-    "      val tags: Map[Int, String] = Source.fromFile(taghashFile).getLines().<FILL IN>\n",
+    "      val tags: Map[Int, String] = Source.fromFile(taghashFile).getLines().map { line =>\n",
+    "        val fields = line.split(\", \")\n",
+    "        (fields(0).toInt, fields(1))\n",
+    "      }.toMap\n",
     "      val songTags = ks.map(_.toInt).flatMap(tags.get)\n",
     "      Song(s.title, s.artist, songTags.toSet)\n",
     "    }\n",
@@ -169,9 +286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "similarity: (one: Song, other: Song)Double\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def similarity(one: Song, other: Song): Double = {\n",
     "  val numCommonTags = (one.tags intersect other.tags).size\n",
@@ -193,9 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quiteSimilar: (one: Song, other: Song, threshold: Double)Boolean\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def quiteSimilar(one: Song, other: Song, threshold: Double): Boolean = {\n",
     "  val commonTags = one.tags.intersect(other.tags)\n",
@@ -213,9 +350,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "differentSong: (one: Song, other: Song)Boolean\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def differentSong(one: Song, other: Song): Boolean = one.title != other.title || one.artist != other.artist"
    ]
@@ -229,10 +376,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "songs = VertexRDDImpl[50] at RDD at VertexRDD.scala:57\n",
+       "similarConnections = MapPartitionsRDD[93] at map at <console>:84\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "similarity: (one: Song, other: Song)Double\n",
+       "quiteSimilar: (one: Song, other: Song, threshold: Double)Boolean\n",
+       "differentSong: (one: Song, other: Song)Boolean\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MapPartitionsRDD[93] at map at <console>:84"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "def similarity(one: Song, other: Song): Double = {\n",
+    "  val numCommonTags = (one.tags intersect other.tags).size\n",
+    "  val numTotalTags = (one.tags union other.tags).size\n",
+    "  if (numTotalTags > 0)\n",
+    "    numCommonTags.toDouble / numTotalTags.toDouble\n",
+    "  else \n",
+    "    0.0\n",
+    "}\n",
+    "\n",
+    "def quiteSimilar(one: Song, other: Song, threshold: Double): Boolean = {\n",
+    "  val commonTags = one.tags.intersect(other.tags)\n",
+    "  val combinedTags = one.tags.union(other.tags)\n",
+    "  commonTags.size > combinedTags.size * threshold\n",
+    "}\n",
+    "\n",
+    "def differentSong(one: Song, other: Song): Boolean = one.title != other.title || one.artist != other.artist\n",
+    "\n",
     "// First, get the songs with tags\n",
     "songs = songsNtags.vertices\n",
     "\n",
@@ -242,12 +438,14 @@
     "    \n",
     "  // similarSongs are the songs with a similarity score larger than 0.7\n",
     "  // Note that not compare a song with itself (use the differentSong method)\n",
-    "  val similarSongs = ss.filter { <FILL IN> }\n",
-    "    \n",
+    "  val similarSongs = ss.filter { \n",
+    "    case ((vId1,song1),(vId2,song2)) => quiteSimilar(song1, song2, 0.7)\n",
+    "  }\n",
+    "\n",
     "  // Now compute the Jaccard metric for the similarSongs. The result should ba an Edge for each pair of songs\n",
     "  // with the vertexIds at the two ends, and the Javvard values as the edge value.\n",
     "  similarSongs.map { p => {\n",
-    "    val jacIdx = <FILL IN>\n",
+    "    val jacIdx = similarity(p._1._2, p._2._2)\n",
     "    Edge(p._1._1, p._2._1, jacIdx)}\n",
     "  }\n",
     "}"
@@ -262,9 +460,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "similarByTagsGraph = org.apache.spark.graphx.impl.GraphImpl@6cf22c24\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.graphx.impl.GraphImpl@6cf22c24"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val similarByTagsGraph = Graph(songs, similarConnections)"
    ]
@@ -278,11 +496,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "similarHighTagsGraph = org.apache.spark.graphx.impl.GraphImpl@67b1f16b\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.graphx.impl.GraphImpl@67b1f16b"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "val similarHighTagsGraph = similarByTagsGraph.subgraph(<FILL IN>)"
+    "val similarHighTagsGraph = similarByTagsGraph.subgraph(vpred = (vid, song) => song.tags.size > 5)"
    ]
   },
   {
@@ -294,9 +532,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "org.apache.spark.SparkException",
+     "evalue": "Job 8 cancelled as part of cancellation of all jobs",
+     "output_type": "error",
+     "traceback": [
+      "org.apache.spark.SparkException: Job 8 cancelled as part of cancellation of all jobs",
+      "  at org.apache.spark.scheduler.DAGScheduler.org$apache$spark$scheduler$DAGScheduler$$failJobAndIndependentStages(DAGScheduler.scala:1889)",
+      "  at org.apache.spark.scheduler.DAGScheduler.handleJobCancellation(DAGScheduler.scala:1824)",
+      "  at org.apache.spark.scheduler.DAGScheduler$$anonfun$doCancelAllJobs$1.apply$mcVI$sp(DAGScheduler.scala:830)",
+      "  at org.apache.spark.scheduler.DAGScheduler$$anonfun$doCancelAllJobs$1.apply(DAGScheduler.scala:830)",
+      "  at org.apache.spark.scheduler.DAGScheduler$$anonfun$doCancelAllJobs$1.apply(DAGScheduler.scala:830)",
+      "  at scala.collection.mutable.HashSet.foreach(HashSet.scala:78)",
+      "  at org.apache.spark.scheduler.DAGScheduler.doCancelAllJobs(DAGScheduler.scala:830)",
+      "  at org.apache.spark.scheduler.DAGSchedulerEventProcessLoop.doOnReceive(DAGScheduler.scala:2082)",
+      "  at org.apache.spark.scheduler.DAGSchedulerEventProcessLoop.onReceive(DAGScheduler.scala:2059)",
+      "  at org.apache.spark.scheduler.DAGSchedulerEventProcessLoop.onReceive(DAGScheduler.scala:2048)",
+      "  at org.apache.spark.util.EventLoop$$anon$1.run(EventLoop.scala:49)",
+      "  at org.apache.spark.scheduler.DAGScheduler.runJob(DAGScheduler.scala:737)",
+      "  at org.apache.spark.SparkContext.runJob(SparkContext.scala:2061)",
+      "  at org.apache.spark.SparkContext.runJob(SparkContext.scala:2082)",
+      "  at org.apache.spark.SparkContext.runJob(SparkContext.scala:2101)",
+      "  at org.apache.spark.rdd.RDD$$anonfun$take$1.apply(RDD.scala:1364)",
+      "  at org.apache.spark.rdd.RDDOperationScope$.withScope(RDDOperationScope.scala:151)",
+      "  at org.apache.spark.rdd.RDDOperationScope$.withScope(RDDOperationScope.scala:112)",
+      "  at org.apache.spark.rdd.RDD.withScope(RDD.scala:363)",
+      "  at org.apache.spark.rdd.RDD.take(RDD.scala:1337)",
+      "  ... 44 elided"
+     ]
+    }
+   ],
    "source": [
     "similarHighTagsGraph.triplets.take(6).foreach(t => println(t.srcAttr + \" ~~~ \" + t.dstAttr + \" => \" + t.attr))"
    ]
@@ -334,16 +602,10 @@
   "language_info": {
    "codemirror_mode": "text/x-scala",
    "file_extension": ".scala",
-   "help_links": [
-    {
-     "text": "MetaKernel Magics",
-     "url": "https://metakernel.readthedocs.io/en/latest/source/README.html"
-    }
-   ],
    "mimetype": "text/x-scala",
    "name": "scala",
    "pygments_lexer": "scala",
-   "version": "0.4.1"
+   "version": "2.11.12"
   }
  },
  "nbformat": 4,
